--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-/*==================== STYLES CSS OF ====================*/
+/*==================== STYLES CSS OF NAME OF PROJECT ====================*/
 
 
 * {
