--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
-*, ::before, ::after {
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,3 +8,7 @@
 html {
   font-size: 62.5%;
 }
+
+body {
+  font-family: "Open Sans", sans-serif;
+}/*# sourceMappingURL=styles.css.map */
