--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,8 +1,8 @@
 // Google font
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-// Variables
-$body-font: 'Open Sans', sans-serif;
+@import '_variables';
+@import '_animations';
 
 * {
     margin: 0;
@@ -11,9 +11,10 @@ $body-font: 'Open Sans', sans-serif;
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; // Set fonts at 10px
 }
 
 body {
     font-family: $body-font;
+    font-size: $fs-16;
 }
