add spacing variables

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,3 +1,4 @@
+
 // Colors
 
 $body-color: hsl(210, 80%, 54%);
@@ -7,6 +8,7 @@ $text-color: hsl(210, 80%, 54%);
 $btn-color: hsl(210, 80%, 54%);
 $link-color: hsl(210, 80%, 54%);
 $linkhover-color: hsl(210, 80%, 54%);
+
 
 // Typography and font sizes 
 
@@ -28,6 +30,7 @@ $fs-58: 5.8rem; // 58px
 $fs-74: 7.4rem; // 74px 
 $fs-90: 9rem; // 90px 
 
+
 // Font weight
 
 $fw-100: 100;
@@ -39,3 +42,18 @@ $fw-600: 600;
 $fw-700: 700;
 $fw-800: 800;
 $fw-900: 900;
+
+
+// Spacing (1rem = 10px)
+
+$space5: .5rem; // 5px
+$space10: 1rem; // 10px
+$space12: 1.2rem; // 12px
+$space15: 1.5rem; // 15px
+$space20: 2rem; // 20px
+$space25: 2.5rem; // 25px
+$space30: 3rem; // 30px
+$space40: 4rem; // 40px
+$space50: 5rem; // 50px
+$space100: 10rem; // 100px
+
